--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -101,3 +101,12 @@
   display: flex;
   width: 40px;
 }
+
+.video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
