--- a/src/components/icons/icon-transition.module.css
+++ b/src/components/icons/icon-transition.module.css
@@ -1,34 +1,43 @@
-
-
 .fill-black {
-  fill: black;
-  transition: stroke fill 0.2s ease;
+	fill: black;
+	transition: stroke fill 0.2s ease;
+}
+
+.fill-white {
+	fill: white;
+	transition: stroke fill 0.2s ease;
 }
 
 .stroke-black {
-  stroke: black;
-  transition: stroke fill 0.2s ease;
+	stroke: black;
+	transition: stroke fill 0.2s ease;
 }
 
 .stroke-white {
-  stroke: #fff;
-  transition: stroke fill 0.2s ease;
+	stroke: #fff;
+	transition: stroke fill 0.2s ease;
 }
 
 :global(.icon-button:hover) .fill-black,
 :global(.icon-button:focus) .fill-black {
-  fill: #fff;
-  transition: stroke fill 0.2s ease;
+	fill: #fff;
+	transition: stroke fill 0.2s ease;
+}
+
+:global(.icon-button:hover) .fill-white,
+:global(.icon-button:focus) .fill-white {
+	fill: #000;
+	transition: stroke fill 0.2s ease;
 }
 
 :global(.icon-button:hover) .stroke-black,
 :global(.icon-button:focus) .stroke-black {
-  stroke: #fff;
-  transition: stroke fill 0.2s ease;
+	stroke: #fff;
+	transition: stroke fill 0.2s ease;
 }
 
 :global(.icon-button:hover) .stroke-white,
 :global(.icon-button:focus) .stroke-white {
-  stroke: black;
-  transition: stroke fill 0.2s ease;
+	stroke: black;
+	transition: stroke fill 0.2s ease;
 }
